--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-02  Ulrich Drepper  <drepper@cygnus.com>
+
+	* sysdeps/unix/sysv/linux/i386/sigaction.c: Read kernel-features.h
+	and elide compatibility code if possible.
+
 1999-06-01  Ulrich Drepper  <drepper@cygnus.com>
 
 	* manual/llio.texi: Remove menu entry for removed section.
