--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-06-06  Ulrich Drepper  <drepper@cygnus.com>
 
+	* sysdeps/unix/sysv/linux/i386/sigaction.c: Correct restorer
+	function handling.
+
 	* sysdeps/unix/sysv/linux/i386/sigaction.c (SA_RESTORER): New #define.
 
 1999-06-06  Andi Kleen  <ak@muc.de>
