--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-06-10  Ulrich Drepper  <drepper@cygnus.com>
+
+	* shadow/fgetspent_r.c (__fgetspent_r): Set errno to ENOENT for
+	returning after last entry.
+	* pwd/fgetpwent_r.c (__fgetpwent_r): Likewise.
+
 1999-06-09  Ulrich Drepper  <drepper@cygnus.com>
 
 	* misc/sysexits.h: Remove advertising clause of copyright.
