--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-11  Ulrich Drepper  <drepper@cygnus.com>
+
+	* inet/arpa/tftp.h: Move attribute declaration in right position.
+
 1999-06-11  Thorsten Kukuk  <kukuk@suse.de>
 
 	* nscd/nscd.c: Add -S options for separate caching of data for
