--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-12  Ulrich Drepper  <drepper@cygnus.com>
+
+	* locale/lc-time.c: Add free_mem function to free if necessary
+	statically allocated memory.
+
 1999-06-10  Jakub Jelinek   <jj@ultra.linux.cz>
 
 	* sysdeps/libm-ieee754/s_truncl.c: Subtract exponent
