--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-06-12  Mark Kettenis  <kettenis@gnu.org>
+
+	* sysdeps/mach/hurd/fork.c (__fork): Make use of `insert_type' when
+	inserting a send right into the child instead of unconditionally
+	copying the send right.
+
 1999-06-12  Ulrich Drepper  <drepper@cygnus.com>
 
 	* locale/lc-time.c: Add free_mem function to free if necessary
