--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,168 @@
+1999-06-13  Ulrich Drepper  <drepper@cygnus.com>
+
+	* sysdeps/i386/fpu/bits/mathinline.h: Add __extension__ to signbit
+	definitions to calm down gcc.
+
+	* db2/db.h: Update from db 2.7.5.
+	* db2/db_185.h: Likewise.
+	* db2/db_int.h: Likewise.
+	* db2/btree/bt_compare.c: Likewise.
+	* db2/btree/bt_conv.c: Likewise.
+	* db2/btree/bt_curadj.c: Likewise.
+	* db2/btree/bt_cursor.c: Likewise.
+	* db2/btree/bt_delete.c: Likewise.
+	* db2/btree/bt_open.c: Likewise.
+	* db2/btree/bt_page.c: Likewise.
+	* db2/btree/bt_put.c: Likewise.
+	* db2/btree/bt_rec.c: Likewise.
+	* db2/btree/bt_recno.c: Likewise.
+	* db2/btree/bt_rsearch.c: Likewise.
+	* db2/btree/bt_search.c: Likewise.
+	* db2/btree/bt_split.c: Likewise.
+	* db2/btree/bt_stat.c: Likewise.
+	* db2/btree/btree_auto.c: Likewise.
+	* db2/common/db_appinit.c: Likewise.
+	* db2/common/db_apprec.c: Likewise.
+	* db2/common/db_err.c: Likewise.
+	* db2/common/db_region.c: Likewise.
+	* db2/common/db_salloc.c: Likewise.
+	* db2/db/db.c: Likewise.
+	* db2/db/db.src: Likewise.
+	* db2/db/db_am.c: Likewise.
+	* db2/db/db_auto.c: Likewise.
+	* db2/db/db_dispatch.c: Likewise.
+	* db2/db/db_dup.c: Likewise.
+	* db2/db/db_iface.c: Likewise.
+	* db2/db/db_join.c: Likewise.
+	* db2/db/db_overflow.c: Likewise.
+	* db2/db/db_pr.c: Likewise.
+	* db2/db/db_rec.c: Likewise.
+	* db2/db/db_ret.c: Likewise.
+	* db2/db185/db185.c: Likewise.
+	* db2/dbm/dbm.c: Likewise.
+	* db2/hash/hash.c: Likewise.
+	* db2/hash/hash_auto.c: Likewise.
+	* db2/hash/hash_dup.c: Likewise.
+	* db2/hash/hash_page.c: Likewise.
+	* db2/hash/hash_rec.c: Likewise.
+	* db2/hash/hash_stat.c: Likewise.
+	* db2/include/btree.h: Likewise.
+	* db2/include/btree_ext.h: Likewise.
+	* db2/include/clib_ext.h: Likewise.
+	* db2/include/common_ext.h: Likewise.
+	* db2/include/db_am.h: Likewise.
+	* db2/include/db_auto.h: Likewise.
+	* db2/include/db_cxx.h: Likewise.
+	* db2/include/db_ext.h: Likewise.
+	* db2/include/db_join.h: Likewise.
+	* db2/include/db_page.h: Likewise.
+	* db2/include/hash.h: Likewise.
+	* db2/include/hash_ext.h: Likewise.
+	* db2/include/lock.h: Likewise.
+	* db2/include/lock_ext.h: Likewise.
+	* db2/include/log.h: Likewise.
+	* db2/include/log_ext.h: Likewise.
+	* db2/include/mp.h: Likewise.
+	* db2/include/mp_ext.h: Likewise.
+	* db2/include/os.h: Likewise.
+	* db2/include/os_ext.h: Likewise.
+	* db2/include/os_func.h: Likewise.
+	* db2/include/txn.h: Likewise.
+	* db2/include/txn_auto.h: Likewise.
+	* db2/include/txn_ext.h: Likewise.
+	* db2/include/xa.h: Likewise.
+	* db2/include/xa_ext.h: Likewise.
+	* db2/lock/lock.c: Likewise.
+	* db2/lock/lock_conflict.c: Likewise.
+	* db2/lock/lock_deadlock.c: Likewise.
+	* db2/lock/lock_region.c: Likewise.
+	* db2/lock/lock_util.c: Likewise.
+	* db2/log/log.c: Likewise.
+	* db2/log/log_archive.c: Likewise.
+	* db2/log/log_auto.c: Likewise.
+	* db2/log/log_findckp.c: Likewise.
+	* db2/log/log_get.c: Likewise.
+	* db2/log/log_put.c: Likewise.
+	* db2/log/log_rec.c: Likewise.
+	* db2/log/log_register.c: Likewise.
+	* db2/mp/mp_bh.c: Likewise.
+	* db2/mp/mp_fget.c: Likewise.
+	* db2/mp/mp_fopen.c: Likewise.
+	* db2/mp/mp_fput.c: Likewise.
+	* db2/mp/mp_fset.c: Likewise.
+	* db2/mp/mp_open.c: Likewise.
+	* db2/mp/mp_pr.c: Likewise.
+	* db2/mp/mp_region.c: Likewise.
+	* db2/mp/mp_sync.c: Likewise.
+	* db2/mutex/mutex.c: Likewise.
+	* db2/mutex/uts4_cc.s: Likewise.
+	* db2/os/os_abs.c: Likewise.
+	* db2/os/os_alloc.c: Likewise.
+	* db2/os/os_config.c: Likewise.
+	* db2/os/os_dir.c: Likewise.
+	* db2/os/os_fid.c: Likewise.
+	* db2/os/os_fsync.c: Likewise.
+	* db2/os/os_map.c: Likewise.
+	* db2/os/os_oflags.c: Likewise.
+	* db2/os/os_open.c: Likewise.
+	* db2/os/os_rw.c: Likewise.
+	* db2/os/os_seek.c: Likewise.
+	* db2/os/os_sleep.c: Likewise.
+	* db2/os/os_spin.c: Likewise.
+	* db2/os/os_stat.c: Likewise.
+	* db2/os/os_tmpdir.c: Likewise.
+	* db2/os/os_unlink.c: Likewise.
+	* db2/progs/db_archive/db_archive.c: Likewise.
+	* db2/progs/db_checkpoint/db_checkpoint.c: Likewise.
+	* db2/progs/db_deadlock/db_deadlock.c: Likewise.
+	* db2/progs/db_dump/db_dump.c: Likewise.
+	* db2/progs/db_load/db_load.c: Likewise.
+	* db2/progs/db_printlog/README: Likewise.
+	* db2/progs/db_printlog/commit.awk: Likewise.
+	* db2/progs/db_printlog/count.awk: Likewise.
+	* db2/progs/db_printlog/db_printlog.c: Likewise.
+	* db2/progs/db_printlog/pgno.awk: Likewise.
+	* db2/progs/db_printlog/range.awk: Likewise.
+	* db2/progs/db_printlog/status.awk: Likewise.
+	* db2/progs/db_printlog/txn.awk: Likewise.
+	* db2/progs/db_recover/db_recover.c: Likewise.
+	* db2/progs/db_stat/db_stat.c: Likewise.
+	* db2/txn/txn.c: Likewise.
+	* db2/txn/txn.src: Likewise.
+	* db2/txn/txn_auto.c: Likewise.
+	* db2/txn/txn_rec.c: Likewise.
+	* db2/xa/xa.c: Likewise.
+	* db2/xa/xa_db.c: Likewise.
+	* db2/xa/xa_map.c: Likewise.
+
+	* db2/btree/bt_close.c: Removed.
+	* db2/db/db_thread.c: Likewise.
+	* db2/hash/hash_debug.c: Likewise.
+	* db2/include/db.h.src: Likewise.
+	* db2/include/db_int.h.src: Likewise.
+	* db2/include/os_jump.h: Likewise.
+	* db2/mutex/alpha.dec: Likewise.
+	* db2/mutex/alpha.gcc: Likewise.
+	* db2/mutex/parisc.hp: Likewise.
+	* db2/mutex/uts4.cc.s: Likewise.
+
+	* db2/Makefile: Add new routines, remove old for 2.7.5.
+	* db2/Versions: Add internal function names for the helper programs.
+	* db2/makedb.c: Update for new cursor callback.
+	* Versions.def: Define versions for libdb.
+
+1999-06-13  Thorsten Kukuk  <kukuk@suse.de>
+
+	* nscd/connections.c (nscd_run): Get user ID for all non-db services.
+	* nscd/Makefile (others, install-sbin): Add nscd_nischeck.
+	* nscd/nscd_nischeck.c: New file.
+	* nscd/nscd.init: Enable use of nscd_nischeck and secure tables.
+
+1999-06-13  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* sysdeps/unix/sysv/linux/bits/socket.h: Add some missing
+	MSG_* flags from Linux 2.2.9.
+
 1999-06-12  Mark Kettenis  <kettenis@gnu.org>
 
 	* Makeconfig (static-start-installed-name): Set to
@@ -18,7 +183,7 @@
 	* locale/lc-time.c: Add free_mem function to free if necessary
 	statically allocated memory.
 
-1999-06-10  Jakub Jelinek   <jj@ultra.linux.cz>
+1999-06-10  Jakub Jelinek  <jj@ultra.linux.cz>
 
 	* sysdeps/libm-ieee754/s_truncl.c: Subtract exponent
 	bias from the raw exponent.
