--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-13  Roland McGrath  <roland@baalperazim.frob.com>
+
+	* hurd/hurdsock.c (_hurd_socket_server): Fix fencepost error in last
+	change.
+
 1999-06-13  Ulrich Drepper  <drepper@cygnus.com>
 
 	* db2/Makefile (distribute): Remove files which do not exist
