--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-06-14  Geoff Keating  <geoffk@ozemail.com.au>
+
+	* stdlib/tst-strtoll.c: New file.
+	* stdlib/Makefile (tests): Add tst-strtoll.c
+	* stdlib/strtol.c: It is not generally true that if
+	(unsigned)a*(unsigned)b overflows, then the result is
+	less than 'a'.
+
 1999-06-14  Thorsten Kukuk  <kukuk@suse.de>
 
 	* nscd/connections.c (handle_request): Only root is allowed to
