--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1999-06-16  Ulrich Drepper  <drepper@cygnus.com>
+
+	* manual/errno.texi: Fix typos.
+	* manual/memory.texi: Likewise.
+	* manual/ctype.texi: Likewise.
+	Patches by Brian Youmans <3diff@gnu.org>.
+
 1999-06-16  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* sysdeps/unix/sysv/linux/netax25/ax25.h (AX25_PIDINCL): Added.
