--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  1999-05-18
+GNU C Library NEWS -- history of user-visible changes.  1999-06-16
 
 Copyright (C) 1992, 93, 94, 95, 96, 97, 98, 99 Free Software Foundation, Inc.
 See the end for copying conditions.
@@ -12,6 +12,8 @@ Version 2.2
 * Thorsten Kukuk added secure mode support to nscd.
 
 * Update from Berkeley db 2.7.5.
+
+* Wide character I/O streams implemented by Ulrich Drepper.
 
 
 Version 2.1.1
